--- a/site/components/project/cube/cube.scss
+++ b/site/components/project/cube/cube.scss
@@ -5,8 +5,9 @@
 
     .cube3d {
       @include cube3d($size);
-      @include cube3d--spin-vertical($size);
-      //@include cube3d--spin-horizontal;
+      //@include cube3d--spin-vertical($size, 1);
+      //@include cube3d--spin-horizontal(1);
+      @include cube3d--spin-both($size, 1);
 
       &__face {
         border: 1px solid;
