Adding colors and text

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -243,8 +243,8 @@
 </div>
 
       </div>
-  		<div class="cube3d__face cube3d__face--top">top</div>
-  		<div class="cube3d__face cube3d__face--bottom">bottom</div>
+  		<div class="cube3d__face cube3d__face--top"></div>
+  		<div class="cube3d__face cube3d__face--bottom"></div>
   		<div class="cube3d__face cube3d__face--left">
         
         <div class="icomoon">
