--- a/site/components/project/cube/cube.html
+++ b/site/components/project/cube/cube.html
@@ -25,8 +25,8 @@
 </div>
 
       </div>
-  		<div class="cube3d__face cube3d__face--top">top</div>
-  		<div class="cube3d__face cube3d__face--bottom">bottom</div>
+  		<div class="cube3d__face cube3d__face--top"></div>
+  		<div class="cube3d__face cube3d__face--bottom"></div>
   		<div class="cube3d__face cube3d__face--left">
         
         <div class="icomoon">
