--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -147,79 +147,17 @@
 
 
   
-  <!-- Modify here -->
-<!-- Below there are some sample icons linking nowhere -->
-<!-- You can remove or add new ones -->
-<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
-<!-- Do the replace twice, in <svg> and <use> -->
-
-<article class="icons">
-  <h3>Icons</h3>
-
-  
-    <!-- Modify here -->
-    <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
-    <div class="icomoon">
-  
-    <a class="icomoon__link" href="mailto:" title="Email">
-  
-
-  <svg class="icomoon__icon icon-envelope"><use xlink:href="#icon-envelope"></use></svg>
-
-  </a>
-</div>
-
-  
-    <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
-    <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://github.com" title="Github">
-  
-
-  <svg class="icomoon__icon icon-github"><use xlink:href="#icon-github"></use></svg>
-
-  </a>
-</div>
-
-  
-    <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
-    <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://twitter.com" title="Twitter">
-  
-
-  <svg class="icomoon__icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
-
-  </a>
-</div>
-
-  
-    <!-- Modify here -->
-    <!-- Replace dummy data like <a href="http://medium.com"> with your real data <a href="http://medium.com<your-data>"> -->
-    <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://medium.com" title="Medium">
-  
-
-  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
-
-  </a>
-</div>
-
-  
-</article>
-
-
   <section class="cube">
   <h3>Cube</h3>
 
   <div class="cube__wrap">
   	<div class="cube3d">
-  		<div class="cube3d__face cube3d__face--front">
-        
-        <div class="icomoon">
+      
+      
+        <div class="cube3d__face cube3d__face--front">
+          
+            
+            <div class="icomoon">
   
     <a class="icomoon__link" href="mailto:" title="Email">
   
@@ -229,10 +167,13 @@
   </a>
 </div>
 
-      </div>
-  		<div class="cube3d__face cube3d__face--back">
-        
-        <div class="icomoon">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--back">
+          
+            
+            <div class="icomoon">
   
     <a class="icomoon__link" href="http://github.com" title="Github">
   
@@ -242,12 +183,13 @@
   </a>
 </div>
 
-      </div>
-  		<div class="cube3d__face cube3d__face--top"></div>
-  		<div class="cube3d__face cube3d__face--bottom"></div>
-  		<div class="cube3d__face cube3d__face--left">
-        
-        <div class="icomoon">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--top">
+          
+            
+            <div class="icomoon">
   
     <a class="icomoon__link" href="http://twitter.com" title="Twitter">
   
@@ -257,20 +199,57 @@
   </a>
 </div>
 
-      </div>
-  		<div class="cube3d__face cube3d__face--right">
-        
-        <div class="icomoon">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--bottom">
+          
+            
+            <div class="icomoon">
   
-    <a class="icomoon__link" href="http://medium.com" title="Medium">
+    <a class="icomoon__link" href="http://instagram.com" title="Instagram">
   
 
-  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
+  <svg class="icomoon__icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
 
   </a>
 </div>
 
-      </div>
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--left">
+          
+            
+            <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://facebook.com" title="Facebook">
+  
+
+  <svg class="icomoon__icon icon-facebook-official"><use xlink:href="#icon-facebook-official"></use></svg>
+
+  </a>
+</div>
+
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--right">
+          
+            
+            <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://lanyrd.com" title="Lanyrd">
+  
+
+  <svg class="icomoon__icon icon-lanyrd"><use xlink:href="#icon-lanyrd"></use></svg>
+
+  </a>
+</div>
+
+          
+        </div>
+      
   	</div>
   </div>
 </sectipn>
