--- a/site/components/project/cube/cube.html
+++ b/site/components/project/cube/cube.html
@@ -3,52 +3,32 @@
 
   <div class="cube__wrap">
   	<div class="cube3d">
-  		<div class="cube3d__face cube3d__face--front">
-        
-        <div class="icomoon">
-  
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
-  
-</div>
-
-      </div>
-  		<div class="cube3d__face cube3d__face--back">
-        
-        <div class="icomoon">
-  
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
-  
-</div>
-
-      </div>
-  		<div class="cube3d__face cube3d__face--top"></div>
-  		<div class="cube3d__face cube3d__face--bottom"></div>
-  		<div class="cube3d__face cube3d__face--left">
-        
-        <div class="icomoon">
-  
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
-  
-</div>
-
-      </div>
-  		<div class="cube3d__face cube3d__face--right">
-        
-        <div class="icomoon">
-  
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
-  
-</div>
-
-      </div>
+      
+      
+        <div class="cube3d__face cube3d__face--front">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--back">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--top">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--bottom">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--left">
+          
+        </div>
+      
+        <div class="cube3d__face cube3d__face--right">
+          
+        </div>
+      
   	</div>
   </div>
 </sectipn>
