All set. Start adjusting colors

--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -3,18 +3,18 @@ html {
     body {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      justify-content: space-around;
 
       min-height: 100vh;
 
       .monogram {
-        @include monogram(40vh, 50vh, .5);
-        display: none;
+        @include monogram(30vh, 30vh, 0);
+        padding: 0 10vw 15vh;
       }
 
       .cube {
         @include cube(white-on-brown, $lem * 4);
+        padding: 0 0 10vh 15vw;
       }
     }
   }
