--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -147,7 +147,13 @@
 
 
   
-  <section class="cube">
+  <!-- Modify here -->
+<!-- Below there are some sample icons linking nowhere -->
+<!-- You can remove or add new ones -->
+<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
+<!-- Do the replace twice, in <svg> and <use> -->
+
+<section class="cube">
   <h3>Cube</h3>
 
   <div class="cube__wrap">
@@ -156,6 +162,8 @@
       
         <div class="cube3d__face cube3d__face--front">
           
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
             
             <div class="icomoon">
   
@@ -172,6 +180,8 @@
       
         <div class="cube3d__face cube3d__face--back">
           
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
             
             <div class="icomoon">
   
@@ -188,6 +198,8 @@
       
         <div class="cube3d__face cube3d__face--top">
           
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
             
             <div class="icomoon">
   
@@ -204,13 +216,15 @@
       
         <div class="cube3d__face cube3d__face--bottom">
           
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
             
             <div class="icomoon">
   
-    <a class="icomoon__link" href="http://instagram.com" title="Instagram">
+    <a class="icomoon__link" href="http://medium.com" title="Medium">
   
 
-  <svg class="icomoon__icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
+  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
 
   </a>
 </div>
@@ -220,33 +234,9 @@
       
         <div class="cube3d__face cube3d__face--left">
           
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://facebook.com" title="Facebook">
-  
-
-  <svg class="icomoon__icon icon-facebook-official"><use xlink:href="#icon-facebook-official"></use></svg>
-
-  </a>
-</div>
-
-          
         </div>
       
         <div class="cube3d__face cube3d__face--right">
-          
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://lanyrd.com" title="Lanyrd">
-  
-
-  <svg class="icomoon__icon icon-lanyrd"><use xlink:href="#icon-lanyrd"></use></svg>
-
-  </a>
-</div>
-
           
         </div>
       
