--- a/site/components/project/cube/cube.html
+++ b/site/components/project/cube/cube.html
@@ -1,3 +1,9 @@
+<!-- Modify here -->
+<!-- Below there are some sample icons linking nowhere -->
+<!-- You can remove or add new ones -->
+<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
+<!-- Do the replace twice, in <svg> and <use> -->
+
 <section class="cube">
   <h3>Cube</h3>
 
