--- a/site/components/framework/design/colors/colors.scss
+++ b/site/components/framework/design/colors/colors.scss
@@ -10,7 +10,7 @@
 $white: #fff;
 
 // Main color
-$brown: rgb(164,130,93);
+$brown: #A4825D;
 
 
 // Color combinations. Colors are not used standalone but in pairs
@@ -31,7 +31,7 @@ $brown: rgb(164,130,93);
 };
 
 .brown {
-  background: rgb(164,130,93);
+  background: #A4825D;
 };
 
 
