--- a/site/components/project/cube/cube.scss
+++ b/site/components/project/cube/cube.scss
@@ -1,7 +1,10 @@
 // - http://paulrhayes.com/experiments/cube-3d/
 @mixin cube($color-scheme, $size: 200px) {
+  display: flex;
+  justify-content: center;
+  
   &__wrap {
-  	@include cube__wrap;
+  	@include cube__wrap($size);
 
     .cube3d {
       @include cube3d($size);
