Starting a new theme

--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -3,18 +3,17 @@ html {
     body {
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: center;
+      align-items: center;
 
       min-height: 100vh;
 
       .monogram {
-        @include monogram(30vh, 30vh, 0);
-        padding: 0 10vw 15vh;
+        @include monogram(30vh, 30vh, 0.5);
       }
 
       .cube {
         @include cube(white-on-brown, $lem * 4);
-        padding: 0 0 10vh 15vw;
       }
     }
   }
