--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Modify here -->
-    <title>Josh Wink - DJ &amp; Producer</title>
+    <title>David Hannemaier Hanson - Ruby on Rails, Basecamp</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="/assets/images/josh-wink.jpg" />
-<link rel="icon" sizes="196x196" href="/assets/images/josh-wink.jpg">
+    <link rel="shortcut icon" href="/assets/images/dhh.jpg" />
+<link rel="icon" sizes="196x196" href="/assets/images/dhh.jpg">
 
   </head>
 
@@ -142,108 +142,11 @@
   
   <section class="monogram">
   <!-- Modify here -->
-  <h3 class="monogram__name">Josh Wink</h3>
+  <h3 class="monogram__name">David Hannemaier Hanson</h3>
 </section>
 
 
   
-  <!-- Modify here -->
-<!-- Below there are some sample icons linking nowhere -->
-<!-- You can remove or add new ones -->
-<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
-<!-- Do the replace twice, in <svg> and <use> -->
-
-<section class="cube">
-  <h3>Cube</h3>
-
-  <div class="cube__wrap">
-  	<div class="cube3d">
-      
-      
-        <div class="cube3d__face cube3d__face--front">
-          
-            <!-- Modify here -->
-            <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="mailto:" title="Email">
-  
-
-  <svg class="icomoon__icon icon-envelope"><use xlink:href="#icon-envelope"></use></svg>
-
-  </a>
-</div>
-
-          
-        </div>
-      
-        <div class="cube3d__face cube3d__face--back">
-          
-            <!-- Modify here -->
-            <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://github.com" title="Github">
-  
-
-  <svg class="icomoon__icon icon-github"><use xlink:href="#icon-github"></use></svg>
-
-  </a>
-</div>
-
-          
-        </div>
-      
-        <div class="cube3d__face cube3d__face--top">
-          
-            <!-- Modify here -->
-            <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://twitter.com" title="Twitter">
-  
-
-  <svg class="icomoon__icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
-
-  </a>
-</div>
-
-          
-        </div>
-      
-        <div class="cube3d__face cube3d__face--bottom">
-          
-            <!-- Modify here -->
-            <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
-            
-            <div class="icomoon">
-  
-    <a class="icomoon__link" href="http://medium.com" title="Medium">
-  
-
-  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
-
-  </a>
-</div>
-
-          
-        </div>
-      
-        <div class="cube3d__face cube3d__face--left">
-          
-        </div>
-      
-        <div class="cube3d__face cube3d__face--right">
-          
-        </div>
-      
-  	</div>
-  </div>
-</sectipn>
-
 
 
 
