--- a/site/components/project/monogram/monogram.scss
+++ b/site/components/project/monogram/monogram.scss
@@ -2,10 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  // if size is 100x100
-  overflow: hidden;
-
-  border: 1px solid;
+  @include border--thick(all);
 
   &__row {
     @include monogram__row($width, $height, $scale);
