--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -147,6 +147,59 @@
 
 
   
+  <!-- Modify here -->
+<!-- Below there are some sample icons linking nowhere -->
+<!-- You can remove or add new ones -->
+<!-- To add a new one copy-paste an existing "icomoon" entry and replace let's say "icon-twitter" with "icon-pinterest" -->
+<!-- Do the replace twice, in <svg> and <use> -->
+
+<article class="icons">
+  <h3>Icons</h3>
+
+  <div class="icons__row">
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+
+      
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+
+      
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <div class="icomoon">
+  
+
+  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
+
+  
+</div>
+
+
+      
+    
+  </div>
+</article>
+
 
 
 
