Now the structure is ready

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Modify here -->
-    <title>David Hannemaier Hanson - Ruby on Rails, Basecamp</title>
+    <title>Same Fernandez - Front-end developer</title>
     <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="/assets/images/dhh.jpg" />
-<link rel="icon" sizes="196x196" href="/assets/images/dhh.jpg">
+    <link rel="shortcut icon" href="/assets/images/same-fernandez.jpg" />
+<link rel="icon" sizes="196x196" href="/assets/images/same-fernandez.jpg">
 
   </head>
 
@@ -142,7 +142,7 @@
   
   <section class="monogram">
   <!-- Modify here -->
-  <h3 class="monogram__name">David Hannemaier Hanson</h3>
+  <h3 class="monogram__name">Same Fernandez</h3>
 </section>
 
 
@@ -159,42 +159,70 @@
   <div class="icons__row">
     
       <!-- Modify here -->
-      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
       <div class="icomoon">
   
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
+    <a class="icomoon__link" href="mailto:" title="Email">
   
+
+  <svg class="icomoon__icon icon-envelope"><use xlink:href="#icon-envelope"></use></svg>
+
+  </a>
 </div>
 
 
       
     
       <!-- Modify here -->
-      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
       <div class="icomoon">
   
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
+    <a class="icomoon__link" href="http://github.com" title="Github">
   
+
+  <svg class="icomoon__icon icon-github"><use xlink:href="#icon-github"></use></svg>
+
+  </a>
+</div>
+
+
+      
+        
+          </div>
+          <div class="icons__row">
+        
+      
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://twitter.com" title="Twitter">
+  
+
+  <svg class="icomoon__icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
+
+  </a>
 </div>
 
 
       
     
       <!-- Modify here -->
-      <!-- Replace dummy data like <a href=""> with your real data <a href="<your-data>"> -->
+      <!-- Replace dummy data like <a href="http://medium.com"> with your real data <a href="http://medium.com<your-data>"> -->
       <div class="icomoon">
   
-
-  <svg class="icomoon__icon icon-"><use xlink:href="#icon-"></use></svg>
-
+    <a class="icomoon__link" href="http://medium.com" title="Medium">
   
+
+  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
+
+  </a>
 </div>
 
 
+      
+        
       
     
   </div>
