--- a/site/components/project/monogram/monogram.scss
+++ b/site/components/project/monogram/monogram.scss
@@ -1,10 +1,12 @@
 @mixin monogram($width, $height, $scale) {
   position: relative;
-  
+
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   @include border--thick(all);
+  padding: $lem;
 
   &__row {
     @include monogram__row($width, $height, $scale);
