--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -10,6 +10,8 @@
   flex-direction: column;
   justify-content: space-between;
 
+  @include icons__background-gradient;
+
   &__row {
     display: flex;
     flex-wrap: wrap;
