--- a/site/components/project/monogram/__row/character/character.scss
+++ b/site/components/project/monogram/__row/character/character.scss
@@ -1,5 +1,6 @@
 @mixin character($percentage: 0, $size: $lem, $space: hidden) {
   @include text-style(title);
+  @include glitch-text('character', 17, $white, $brown, red, blue, 450, 115);
 
   @if ($percentage == 0) {
     // do not set font size
