--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -16,7 +16,7 @@ html {
       }
 
       .icons {
-        @include icons(white-on-brown);
+        @include icons(white-on-black);
       }
     }
   }
