--- a/site/components/project/monogram/monogram.scss
+++ b/site/components/project/monogram/monogram.scss
@@ -6,8 +6,11 @@
   flex-direction: column;
   justify-content: space-between;
 
+  @include colors(cyan-on-magenta);
   @include border--thick(all);
   padding: $lem;
+
+
 
   &__row {
     @include monogram__row($width, $height, $scale);
