--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  @include background-gradient__row;
+  @include background-gradient;
 
   &__row {
     display: flex;
