Working on the random generator

--- a/site/components/framework/structure/background-gradient/__row/background-gradient__row.scss
+++ b/site/components/framework/structure/background-gradient/__row/background-gradient__row.scss
@@ -5,6 +5,7 @@
 
 // Returns multiple gradients
 @function gradient-row($colors, $stops) {
+  @debug length($colors);
   // Returns a complete list of gradients
   $gradients: #{gradient(nth($colors, 1), nth($stops, 1), nth($stops, 2))};
   @for $i from 2 through length($colors) {
