--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -10,7 +10,15 @@
   flex-direction: column;
   justify-content: space-between;
 
-  $color-columns: (
+  $palette: color-palette(3, #000, #fff);
+  $color-columns:
+    $palette,
+    randomize-list($palette);
+  $color-stops:
+    0px 10px 20px 30px,
+    0px 10px 20px 30px;
+
+  $color-columns2: (
     ('red', 'green', 'blue', 'magenta', 'cyan', 'yellow', 'white', 'black', 'gray'),
     ('magenta', 'cyan', 'red', 'green', 'blue', 'white', 'black', 'yellow', 'gray'),
     ('green', 'cyan', 'red', 'magenta', 'white', 'blue', 'black', 'gray', 'yellow'),
@@ -21,7 +29,7 @@
     ('gray', 'black', 'red', 'magenta', 'cyan', 'yellow', 'white', 'blue', 'green'),
     ('black', 'white', 'blue', 'yellow', 'green', 'gray', 'cyan', 'red', 'magenta')
   );
-  $color-stops: (
+  $color-stops2: (
     ('0px', '13px', '26px', '30px', '47px', '50px', '69px', '71px', '72px', '100px'),
     ('0px', '17px', '19px', '20px', '43px', '50px', '60px', '71px', '79px', '160px'),
     ('0px', '1px', '9px', '20px', '23px', '30px', '66px', '77px', '79px', '100px'),
