--- a/site/components/framework/structure/background-gradient/background-gradient.scss
+++ b/site/components/framework/structure/background-gradient/background-gradient.scss
@@ -2,6 +2,9 @@
 // - it has to have min two rows
 // - if only a single row needed the __row mixin should be used instead
 @mixin background-gradient($color-columns, $color-stops) {
+  @debug $color-columns;
+  @debug $color-stops;
+  
   $columns: "repeating-linear-gradient(to left, #{gradient-row(nth($color-columns, 1), nth($color-stops, 1)))})";
   @for $i from 2 through length($color-columns) {
     $columns: $columns#{', '}#{"repeating-linear-gradient(to left, #{gradient-row(nth($color-columns, $i), nth($color-stops, $i)))})"};
