--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -21,12 +21,18 @@
     randomize-list($palette),
     randomize-list($palette),
     randomize-list($palette),
+    randomize-list($palette),
+    randomize-list($palette),
+    randomize-list($palette),
     randomize-list($palette);
   $color-stops:
     gradient-stops(3, 1%),
     gradient-stops(3, 1px),
     gradient-stops(3, 1em),
     gradient-stops(3, 1vw),
+    gradient-stops(3, 1vh),
+    gradient-stops(3, 1rem),
+    gradient-stops(3, 1px),
     gradient-stops(3, 1px),
     gradient-stops(3, 1vh),
     gradient-stops(3, 1rem),
