--- a/site/components/framework/design/colors/palette/palette.scss
+++ b/site/components/framework/design/colors/palette/palette.scss
@@ -17,7 +17,29 @@
 
 // Generate random steps for a color palette to be used as a background gradient
 // - metric can be px, vw, % or em
-@function gradient-stops($nr-of-stops, $metric) {
+// - if no metric given a random one will be chosen
+@function gradient-stops($nr-of-stops, $metric: none) {
+  @if ($metric != none) {
+    $rnd: random-sizes($metric);
+  } @else {
+    $units: 1px, 1vw, 1vh, 1rem, 1em, 1%;
+    $metric: nth($units, random(length($units)));
+    $rnd: random-sizes($metric);
+  }
+
+  $return: ();
+  $return: append($return, 0 * $metric);
+  @for $i from 1 through $nr-of-stops {
+    $random: random($rnd) * $metric;
+    $return: append($return, $random);
+  }
+
+  @return $return;
+}
+
+
+// Random sizes for a color palette
+@function random-sizes($metric) {
   @if ($metric == 1px) {
     $rnd: 100;
   } @else if ($metric == 1%) {
@@ -32,14 +54,7 @@
     $rnd: 7;
   }
 
-  $return: ();
-  $return: append($return, 0 * $metric);
-  @for $i from 1 through $nr-of-stops {
-    $random: random($rnd) * $metric;
-    $return: append($return, $random);
-  }
-
-  @return $return;
+  @return $rnd;
 }
 
 
